@@ -488,15 +488,8 @@ static bool isTime_tSigned()
 
 JSValue *DateProtoFunc::callAsFunction(ExecState *exec, JSObject *thisObj, const List &args)
 {
-  if ((id == ToString || id == ValueOf || id == GetTime || id == SetTime) &&
-      !thisObj->inherits(&DateInstance::info)) {
-    // non-generic function called on non-date object
-
-    // ToString and ValueOf are generic according to the spec, but the mozilla
-    // tests suggest otherwise...
+  if (!thisObj->inherits(&DateInstance::info))
     return throwError(exec, TypeError);
-  }
-
 
   JSValue *result = 0;
   UString s;
